--- a/jgclark.Reviews/experiments/SVG-circle-test-attempt3.html
+++ b/jgclark.Reviews/experiments/SVG-circle-test-attempt3.html
@@ -67,6 +67,8 @@
   class="percent-ring"
   height="200" width="200" // SVG units
   viewBox="0 0 100 100" // scale to 100x100
+  onload="setPercentRing(Math.round(Math.random() * 100), 'id-percent-ring-1');"
+  onclick="setPercentRing(Math.round(Math.random() * 100), 'id-percent-ring-1');"
   >
   <circle
     class="percent-ring-circle"
